MCA App/Release/MCA Demo org/src/objects/Opportunity_Weekly_Analysis__c.object
<CustomObject>
    <description>Mapped with the Analytical Snapshot</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Weekly Analysis</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Stage__c</columns>
        <columns>Amount__c</columns>
        <columns>Count__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Opportunity Weekly Analysis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Weekly Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>